<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".vues.Jeu">

    <Button
        android:id="@+id/valider"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/valider"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/abandonner"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="16dp"
        android:text="@string/abandonner"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nouvelle_partie"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/nouvelle_partie"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/abandonner"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="412dp"
        android:layout_height="488dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/jouer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abandonner">


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="124dp">

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paletteHolder"
        android:layout_width="409dp"
        android:layout_height="122dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/valider"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/palette" android:id="@+id/palette"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>