<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".vues.Configuration">

    <TextView
        android:id="@+id/config_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/historique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/config"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/text_code"
        android:layout_width="161dp"
        android:layout_height="21dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="144dp"
        android:text="@string/longueur_du_code"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historique"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/spinner_code"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-12dp"
        app:layout_constraintStart_toEndOf="@+id/text_code"
        app:layout_constraintTop_toTopOf="@+id/text_code"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/spinner_couleurs"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_code"
        app:layout_constraintTop_toBottomOf="@+id/spinner_code"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/spinner_tentative"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_code"
        app:layout_constraintTop_toBottomOf="@+id/spinner_couleurs"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_couleur"
        android:layout_width="161dp"
        android:layout_height="21dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="55dp"
        android:text="@string/nombre_de_couleurs"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_code" />

    <TextView
        android:id="@+id/text_tentative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/nombre_maximal_de_tentative"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_couleur" />

    <ImageButton
        android:id="@+id/back_arrow_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_arrow"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>